Fix smart contract deploy overflow with large contracts

--- a/src/index.scss
+++ b/src/index.scss
@@ -184,6 +184,8 @@ a{
   &--large {
     align-items: flex-start;
     flex-direction: column;
+    max-height: 100px;
+    overflow-y: auto;
 
     .TxDataRow__value{
       margin-top: 6px;
